
* The `gschem' "Edit Text Properties" dialog now has an easier to use
  "Alignment" menu.

* PNG export from `gschem' will now be cropped correctly.

* Printed text size now better matches on-screen text size in
  `gschem'.

* Special characters, including commas, are now escaped or quoted
  appropriately in `gattrib' CSV output.

* Several changes to `gnetlist' command-line options:

  - The list of available backends is now obtained using a new
    `--list-backends' option.  `-g help' no longer outputs a list of
    backends.

  - A new `-L' option is available, which adds a directory to the
    Scheme load path.

  - A new `-V' or `--version' option is available, which displays
    version information.

  - When run with invalid command-line arguments, `gnetlist' now exits
    with non-zero exit status.

* Several `gnetlist' backends have now been fixed so that it should no
  longer be necessary to set an expanded Guile stack in gEDA's config
  files.

* The `partlist' backends for `gnetlist' now handle hierarchical
  refdes correctly.

* The `spice-sdb' backend for `gnetlist' now supports probes
  (`TESTPOINT' devices).

* On Windows, `gschem' and `gattrib' will no longer launch with a
  command window visible.

* The undocumented `mk_verilog_syms' program is no longer installed.
  The symbols it creates are still installed to
  `${prefix}/share/gEDA/sym/verilog'.

Notable changes in gEDA/gaf 1.6.1
=================================

* Added accelerator mnemonics for root menus in gschem

* Lots of updated and new language translations in libgeda, gschem, and
  gattrib.  (Courtesy of language translators and Launchpad) 

* Updated the shipped documentation from the official gEDA wiki

* Fixed the following bugs:

  - 2876373: Fix rendering with zoomed out dashed lines
  - 2901183: Fix for some manpage issues
  - 2904715: Don't update page connectivity from o_place_rotate()
  - 2949232: Fix slot editing routines to not edit inherited attributes 