@@ -48,10 +48,6 @@ int list_backends=FALSE;
 int verbose_mode=FALSE;
 int interactive_mode=FALSE;
 int quiet_mode=FALSE;
-int sort_mode=FALSE;
-int include_mode=FALSE;
-int embedd_mode=FALSE;
-int nomunge_mode = FALSE;
 
 /* what kind of netlist are we generating? see define.h for #defs */
 int netlist_mode=gEDA;
